--- a/index.html
+++ b/index.html
@@ -1,1 +1,147 @@
-(@_@)
+<html>
+  <head>
+    <link rel="stylesheet" href="basscss.css">
+    <style>
+      @media print
+      {    
+        .no-print, .no-print *
+        {
+          display: none !important;
+        }
+        p {
+          font-size: 14px;
+        }
+        h1 {
+          font-size: 18px;
+        }
+        h3 {
+          font-size: 16px;
+        }
+      }
+      @media screen
+      {
+        .print, .print *
+        {
+          display: none !important;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <header class="no-print center px3 py4 white bg-gray bg-cover bg-center">
+    <h1 class="h1 h0-responsive caps mt4 mb0 regular">Eric Chlebek</h1>
+    <p class="h3">Software Architect</p>
+    <p class="h5 italic">Vancouver, BC</p>
+    <a class="btn btn-outline m4" href="#resume">Resume</a>
+    <a class="btn btn-outline" href="https://github.com/echlebek">
+      <img class="mr1" src="github.svg"></img>
+      GitHub
+    </a>
+    <a class="btn btn-outline m4" href="https://twitter.com/EricChlebek">
+      <img style="width: 20px" class="mr1" src="twitter.svg"></img>
+      Twitter
+    </a>
+    </header>
+    <header class="print center mb0 bg-cover bg-center">
+      <h1 class="h1 h0-responsive mt4 mb0 regular">Eric Chlebek</h1>
+      <p class="h3">Software Architect</p>
+      <p class="h5 italic">Vancouver, BC</p>
+    </header>
+    <main id="resume" class="flex-auto px4">
+      <h1 class="h1 black regular h0-responsive">Education</h1>
+      <p class="h3 ml2">
+      B.Sc. Computer Science, <a href="http://www.unbc.ca" class="black">University of Northern British Columbia</a><span class="ml2 italic">(2005-2010)</span>
+      </p>
+      <p class="ml3">
+      At UNBC, I became a disciplined self-actualizing problem solver.
+      My interests at the time were Go (the game), robotics, and Linux.
+      While my grades suffered in the beginning, by the end of the program I was an A+ student, earning a 3.3 GPA overall.
+      </p>
+      <p></p>
+      <h1 class="h1 black regular h0-responsive">Work Experience</h1>
+      <p class="h3 ml2">
+      Software Developer, Zymeworks Inc. <span class="ml2 italic">(2010-)</span>
+      </p>
+      <p class="ml3">
+      My career as a software developer at Zymeworks, a biopharmaceuticals company, began with writing command-line Python applications for scientists.
+      I soon graduated to writing scientific workflows for the protein engineering department. One of my workflows, although simple,
+      proved to be very successful and was integrated into many standard protein engineering SOPs.
+      </p>
+      <p class="ml3">
+      Over time, I was tasked with more difficult assignments. I've worked on, maintained or integrated most of the software systems at Zymeworks, including a molecular
+      dynamics simulator written in C, a protein packing application written in Python, and many others.
+      </p>
+      <p class="ml3">
+      I helped to introduce <a class="black" href="http://www.knime.com">KNIME</a> to Zymeworks, by writing tools that allowed
+      <a class="black" href="http://www.knime.com">KNIME</a> to read Zymeworks' proprietary file formats. KNIME became a huge success at Zymeworks,
+      and I still maintain many systems related to it today.
+      </p>
+      <p class="ml3">
+      Currently at Zymeworks, my interests and efforts are solidly in the back-end, writing servers in Go backed by PostgresQL. I strive to create simple, robust
+      and testable systems that are straightforward to modify and maintain. Recently, I have taken an interest in automation and devops, as the company is growing
+      at a fast clip.
+      </p>
+      <p class="h3 ml2">
+      Software Developer, Terahertz Solutions Inc. <span class="ml2 italic">(2009-2010)</span>
+      <p class="ml3">
+      I implemented the software component of a terahertz radiation scanner used in the forest products industry.
+      This product was similar to a scanner, with a data collector that moved back and forth across a factory line.
+      I programmed the motion controller and data acquisition system, which were synchronized to collect nanosecond-resolution
+      time-series data. Unfortunately, the company could not afford to employ me full-time and I was forced to seek employment elsewhere.
+      </p>
+      <p class="ml3">
+      As the sole developer on this project, I was responsible for every aspect of software development, including programming,
+      user interface design, deployment, testing, and automation. While I was far too inexperienced at the time to perform all of these
+      roles properly, I was able to deliver a working product that reliably scanned and collected data. The product was written in NI Labview
+      and communicated with a data acquisition machine over raw UDP sockets. The motion controller was programmed in a domain-specific language similar to assembler.
+      My only teammates were an electrical engineer who designed the robotics hardware, and a physicist who headed the project and developed
+      the mathematics for analyzing the terahertz time-series data.
+      </p>
+      <p class="h3 ml2">
+      IT Administrator, University of Northern British Columbia <span class="ml2 italic">(2008)</span>
+      </p>
+      <p class="ml3">
+      As a temporary replacement systems administrator, I oversaw the operations of the UNBC GIS lab. The GIS lab ran a mixture of Windows 2000 and SuSE Linux,
+      and had sophisticated and demanding users who generated massive amounts of data. The job had plenty of challenges, and I was often left to my own devices.
+      </p>
+      <p class="ml3">
+      A few weeks into the job, I realized that the backup system had completely failed due to a software installation and upgrade failure. The system was completely unmonitored.
+      I analyzed the backup software execution with <span class="italic courier">strace</span> and discovered that some crucial dependencies were failing to load. Once I installed
+      the dependencies, the system came back online. I then coordinated with the UNBC IT department to ensure that the backup system was being monitored by their staff.
+      </p>
+      <p class="ml3">
+      As a budding computer programmer, I wrote software that collected and analyzed disk usage statistics and presented a pie chart of disk usage by user. I discovered that three people were using over 75% of the storage
+      provided by the GIS department. This allowed me to coax these users into reducing any unnecessary files, reclaiming many gigabytes of space.
+      </p>
+      <h1 class="h1 black regular h0-responsive">Skills</h1>
+      <p class="ml3 h3">
+      Programming Languages
+      </p>
+      <ul class="ml3">
+        <li>Go, Python, SQL</li>
+      </ul>
+      <p class="ml3">
+      I enjoy using these simple programming languages for building and testing complex systems.
+      I am also fluent in C, Java and Bash, and I've had brief adventures in the world of Haskell and Prolog.
+      </p>
+      <p class="ml3 h3">
+      Personal Development Environment
+      </p>
+      <p class="ml3">
+      A Linux or Mac OS X machine equipped with VirtualBox, Vagrant, MacVim and Chrome. With these simple tools, I can build powerful apps quickly.
+      </p>
+      <h1 class="h1 black regular h0-responsive">Personal</h1>
+      <p class="ml3">
+      I am a focused and motivated individual who enjoys working alone or as part of a team. In a team
+      setting, I often take on leadership roles. I am known for being able to learn new things on the job -
+      a critical skill for a person in my field. I often take on tasks that I have little or no experience in, and
+      succeed.
+      </p>
+      <p class="ml3">
+      In my spare time I enjoy playing guitar, a hobby I have pursued for over 19 years. As for physical
+      fitness, I enjoy cycling, running, and skiing. I am an experienced back-country hiker and skier and
+      have spent hundreds of hours traversing the mountains of BC.
+      </p>
+    </main>
+  </body>
+</html>
