--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
   </head>
   <body>
-    <header class="no-print center px3 py4 white bg-gray bg-cover bg-center">
+    <header class="no-print center px3 py4 white bg-gray bg-cover bg-center" style="background-image: url(bg.jpg); background-size: 100%;">
     <h1 class="h1 h0-responsive caps mt4 mb0 regular">Eric Chlebek</h1>
     <p class="h3">Software Architect</p>
     <p class="h5 italic">Vancouver, BC</p>
