--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="no-print center px3 py4 white bg-gray bg-cover bg-center" style="background-image: url(bg.jpg); background-size: 100%;">
     <h1 class="h1 h0-responsive caps mt4 mb0 regular">Eric Chlebek</h1>
     <p class="h3">Software Architect</p>
-    <p class="h5 italic">Vancouver, BC</p>
+    <p class="h5 italic"><img class="mr1" src="canada.svg" style="width: 22px;"></img>Vancouver, BC</p>
     <a class="btn btn-outline m4" href="#resume">Resume</a>
     <a class="btn btn-outline" href="https://github.com/echlebek">
       <img class="mr1" src="github.svg"></img>
