Add 'About Me', de-emphasise education.

--- a/index.html
+++ b/index.html
@@ -48,15 +48,13 @@
       <p class="h5 italic">Vancouver, BC</p>
     </header>
     <main id="resume" class="flex-auto px4">
-      <h1 class="h1 black regular h0-responsive">Education</h1>
-      <p class="h3 ml2">
-      B.Sc. Computer Science, <a href="http://www.unbc.ca" class="black">University of Northern British Columbia</a><span class="ml2 italic">(2005-2010)</span>
-      </p>
+      <h1 class="h1 black regular h0-responsive">About Me</h1>
       <p class="ml3">
-      At UNBC, I became a disciplined self-actualizing problem solver.
-      My interests at the time were Go (the game), robotics, and Linux.
-      While my grades suffered in the beginning, by the end of the program I was an A+ student, earning a 3.3 GPA overall.
+      I'm a Canadian software developer who grew up in northern British Columbia.
+      I enjoy learning new things, good conversation, skiing, and craft beer.
+      In my work, I strive to materialize my goals and visions.
       </p>
+
       <p></p>
       <h1 class="h1 black regular h0-responsive">Work Experience</h1>
       <p class="h3 ml2">
@@ -130,6 +128,16 @@
       <p class="ml3">
       A Linux or Mac OS X machine equipped with VirtualBox, Vagrant, MacVim and Chrome. With these simple tools, I can build powerful apps quickly.
       </p>
+      <p></p>
+      <h1 class="h1 black regular h0-responsive">Education</h1>
+      <p class="h3 ml2">
+      B.Sc. Computer Science, <a href="http://www.unbc.ca" class="black">University of Northern British Columbia</a><span class="ml2 italic">(2005-2010)</span>
+      </p>
+      <p class="ml3">
+      At UNBC, I became a disciplined self-actualizing problem solver.
+      My interests at the time were Go (the game), robotics, and Linux.
+      </p>
+      <p></p>
       <h1 class="h1 black regular h0-responsive">Personal</h1>
       <p class="ml3">
       I am a focused and motivated individual who enjoys working alone or as part of a team. In a team
