--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="no-print center px3 py4 white bg-gray bg-cover bg-center" style="background-image: url(bg.jpg); background-size: 100%;">
     <h1 class="h1 h0-responsive caps mt4 mb0 regular">Eric Chlebek</h1>
     <p class="h3">Software Architect</p>
-    <p class="h5 italic"><img class="mr1" src="canada.svg" style="width: 22px;"></img>Vancouver, BC</p>
+    <p class="h5 italic"><img class="mr1" src="canada.svg" style="width: 22px;"></img><a class="white" href="https://goo.gl/maps/sKpw376r3z72">Vancouver, BC</a></p>
     <a class="btn btn-outline m4" href="#resume">Resume</a>
     <a class="btn btn-outline" href="https://github.com/echlebek">
       <img class="mr1" src="github.svg"></img>
@@ -58,7 +58,7 @@
       <p></p>
       <h1 class="h1 black regular h0-responsive">Work Experience</h1>
       <p class="h3 ml2">
-      Software Developer, Zymeworks Inc. <span class="ml2 italic">(2010-)</span>
+      Software Developer, <a class="black" href="http://www.zymeworks.com">Zymeworks Inc.</a> <span class="ml2 italic">(2010-)</span>
       </p>
       <p class="ml3">
       My career as a software developer at Zymeworks, a biopharmaceuticals company, began with writing command-line Python applications for scientists.
@@ -96,7 +96,7 @@
       the mathematics for analyzing the terahertz time-series data.
       </p>
       <p class="h3 ml2">
-      IT Administrator, University of Northern British Columbia <span class="ml2 italic">(2008)</span>
+      IT Administrator, <a href="http://www.unbc.ca" class="black">University of Northern British Columbia</a> <span class="ml2 italic">(2008)</span>
       </p>
       <p class="ml3">
       As a temporary replacement systems administrator, I oversaw the operations of the UNBC GIS lab. The GIS lab ran a mixture of Windows 2000 and SuSE Linux,
