Add media query to try getting bigger header on iPhone.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
           display: none !important;
         }
       }
+      @media only screen and (max-device-width:480px)
+      {
+        header {
+          zoom: 200%;
+        }
+      }
     </style>
   </head>
   <body>
