Constraint width of site.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         {
           display: none !important;
         }
-      }
-      @media only screen and (max-device-width:480px)
-      {
-        header {
-          zoom: 200%;
+        html {
+          max-width: 1800px;
+          position: relative;
+          margin: 0 auto;
+          background: #000000;
         }
       }
     </style>
