--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </p>
       <p class="ml3">
       My career as a software developer at Zymeworks, a biopharmaceuticals company, began with writing command-line Python applications for scientists.
-      I soon graduated to writing scientific workflows for the protein engineering department. One of my workflows, although simple,
+      I soon graduated to writing HPC workflows for the protein engineering department. One of my workflows, although simple,
       proved to be very successful and was integrated into many standard protein engineering SOPs.
       </p>
       <p class="ml3">
