--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       Software Developer, Terahertz Solutions Inc. <span class="ml2 italic">(2009-2010)</span>
       <p class="ml3">
       I implemented the software component of a terahertz radiation scanner used in the forest products industry.
-      This product was similar to a scanner, with a data collector that moved back and forth across a factory line.
+      This product was similar to a desktop scanner, with a data collector that moved back and forth across a factory line.
       I programmed the motion controller and data acquisition system, which were synchronized to collect nanosecond-resolution
       time-series data. Unfortunately, the company could not afford to employ me full-time and I was forced to seek employment elsewhere.
       </p>
