Increase modesty of title

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <header class="no-print center px3 py4 white bg-gray bg-cover bg-center" style="background-image: url(bg.jpg); background-size: 100%;">
     <h1 class="h1 h0-responsive caps mt4 mb0 regular">Eric Chlebek</h1>
-    <p class="h3">Software Architect</p>
+    <p class="h3">Software Developer</p>
     <p class="h5 italic"><img class="mr1" src="canada.svg" style="width: 22px;"></img><a class="white" href="https://goo.gl/maps/sKpw376r3z72">Vancouver, BC</a></p>
     <a class="btn btn-outline m4" href="#resume">Resume</a>
     <a class="btn btn-outline" href="https://github.com/echlebek">
