Pull styles out of index

--- a/index.html
+++ b/index.html
@@ -1,37 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="basscss.css">
-    <style>
-      @media print
-      {    
-        .no-print, .no-print *
-        {
-          display: none !important;
-        }
-        p {
-          font-size: 14px;
-        }
-        h1 {
-          font-size: 18px;
-        }
-        h3 {
-          font-size: 16px;
-        }
-      }
-      @media screen
-      {
-        .print, .print *
-        {
-          display: none !important;
-        }
-        html {
-          max-width: 1800px;
-          position: relative;
-          margin: 0 auto;
-          background: #000000;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="site.css">
   </head>
   <body>
     <header class="no-print center px3 py4 white bg-gray bg-cover bg-center" style="background-image: url(bg.jpg); background-size: 100%;">
