--- a/resume/index.html
+++ b/resume/index.html
@@ -3,10 +3,10 @@
     <link rel="stylesheet" href="basscss.css">
     <link rel="stylesheet" href="site.css">
   </head>
-  <header class="no-print center px3 py4 white bg-gray bg-cover bg-center" style="background-image: url(bg.jpg); background-size: 100%;">
+  <header class="no-print center px3 py4 white bg-gray bg-cover bg-center" style="background-image: url(/bg.jpg); background-size: 100%;">
     <h1 class="h1 h0-responsive caps mt4 mb0 regular">Eric Chlebek</h1>
     <p class="h3">Software Developer</p>
-    <p class="h5 italic"><img class="mr1" src="canada.svg" style="width: 22px;"></img><a class="white" href="https://goo.gl/maps/sKpw376r3z72">Vancouver, BC</a></p>
+    <p class="h5 italic"><img class="mr1" src="/canada.svg" style="width: 22px;"></img><a class="white" href="https://goo.gl/maps/sKpw376r3z72">Vancouver, BC</a></p>
   </header>
   <header class="print center mb0 bg-cover bg-center">
     <h1 class="h1 h0-responsive mt4 mb0 regular">Eric Chlebek</h1>
@@ -110,7 +110,7 @@
     fitness, I enjoy cycling, running, and skiing. I am an experienced back-country hiker and skier and
     have spent hundreds of hours traversing the mountains of BC.
     </p>
-    <div class="center p4"><img class="center circle" src="tree.jpg" style="width: 5%;"></img></div>
+    <div class="center p4"><img class="center circle" src="/tree.jpg" style="width: 5%;"></img></div>
   </main>
 </html>
 
