--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="basscss.css">
-    <link rel="stylesheet" href="site.css">
+    <link rel="stylesheet" href="/basscss.css">
+    <link rel="stylesheet" href="/site.css">
   </head>
   <header class="no-print center px3 py4 white bg-gray bg-cover bg-center" style="background-image: url(/bg.jpg); background-size: 100%;">
     <h1 class="h1 h0-responsive caps mt4 mb0 regular">Eric Chlebek</h1>
