Tree now links to main page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       I'm a Canadian software developer who grew up in northern British Columbia.
       I enjoy learning new things, good conversation, skiing, and craft beer.
       </p>
-      <div class="center p4"><img class="center circle" src="tree.jpg" style="width: 5%;"></img></div>
+      <div>
+        <a href="/" class="center p4"><img class="center circle" src="/tree.jpg" style="width: 5%;"></img></a>
+      </div>
     </main>
   </body>
 </html>
