--- a/resume/index.html
+++ b/resume/index.html
@@ -110,7 +110,9 @@
     fitness, I enjoy cycling, running, and skiing. I am an experienced back-country hiker and skier and
     have spent hundreds of hours traversing the mountains of BC.
     </p>
-    <div class="center p4"><img class="center circle" src="/tree.jpg" style="width: 5%;"></img></div>
+    <div>
+      <a href="/" class="center p4"><img class="center circle" src="/tree.jpg" style="width: 5%;"></img></a>
+    </div>
   </main>
 </html>
 
