--- a/resume/index.html
+++ b/resume/index.html
@@ -110,8 +110,8 @@
     fitness, I enjoy cycling, running, and skiing. I am an experienced back-country hiker and skier and
     have spent hundreds of hours traversing the mountains of BC.
     </p>
-    <div>
-      <a href="/" class="center p4"><img class="center circle" src="/tree.jpg" style="width: 5%;"></img></a>
+    <div class="center p4">
+      <a href="/"><img class="center circle" src="/tree.jpg" style="width: 5%;"></img></a>
     </div>
   </main>
 </html>
