--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       I'm a Canadian software developer who grew up in northern British Columbia.
       I enjoy learning new things, good conversation, skiing, and craft beer.
       </p>
-      <div>
-        <a href="/" class="center p4"><img class="center circle" src="/tree.jpg" style="width: 5%;"></img></a>
+      <div class="center p4">
+        <a href="/"><img class="center circle" src="/tree.jpg" style="width: 5%;"></img></a>
       </div>
     </main>
   </body>
