--- a/resume/index.html
+++ b/resume/index.html
@@ -33,6 +33,10 @@
     and I still maintain many systems related to it today.
     </p>
     <p class="ml3">
+    I've also created or maintained several apps in Angular and React. I prefer React by far, and found it far easier to
+    build reusable, testable components with it.
+    </p>
+    <p class="ml3">
     Currently at Zymeworks, my interests and efforts are solidly in the back-end, writing servers in Go backed by PostgresQL. I strive to create simple, robust
     and testable systems that are straightforward to modify and maintain. Recently, I have taken an interest in automation and devops, as the company is growing
     at a fast clip.
@@ -80,7 +84,8 @@
     </ul>
     <p class="ml3">
     I enjoy using these simple programming languages for building and testing complex systems.
-    I am also fluent in C, Java and Bash, and I've had brief adventures in the world of Haskell and Prolog.
+    I am also fluent in C, Java, Bash and Javascript, and I've had brief adventures in the world of Haskell and Prolog.
+    I'm hoping to venture into the worlds of Scala and Elm soon.
     </p>
     <p class="ml3 h3">
     Personal Development Environment
