Promote personal projects.

--- a/resume/index.html
+++ b/resume/index.html
@@ -33,7 +33,7 @@
     and I still maintain many systems related to it today.
     </p>
     <p class="ml3">
-    I've also created or maintained several apps in Angular and React. I prefer React by far, and found it far easier to
+    I've also created or maintained several apps in Angular and React. I prefer React by far, and found it easy to
     build reusable, testable components with it.
     </p>
     <p class="ml3">
@@ -77,10 +77,37 @@
     </p>
     <h1 class="h1 black regular h0-responsive">Skills</h1>
     <p class="ml3 h3">
-    Programming Languages
+    I'm most skilled at:
     </p>
     <ul class="ml3">
-      <li>Go, Python, SQL</li>
+      <li>Go
+        <ul>
+          <li><a href="https://github.com/echlebek/erickson">
+            erickson
+          </a> - A code review webapp written almost entirely in Go</li>
+          <li><a href="https://github.com/echlebek/strictjson">
+            strictjson
+          </a> - A JSON validator</li>
+        </ul>
+      </li>
+      <li>Python
+        <ul>
+          <li><a href="https://github.com/echlebek/h5xl">
+            h5xl
+          </a> - Convert <a href="http://www.hdfgroup.org/">HDF5</a> files into Excel workbooks</li>
+          </li>
+          <li><a href="https://github.com/echlebek/cypres">
+            Optimizing Python programs with Cython
+          </a></li>
+        </ul>
+      </li>
+      <li>SQL
+        <ul>
+          <li><a href="https://github.com/echlebek/nutes">
+            nutes
+          </a> - SQL import of USDA nutrient database</li>
+        </ul>
+      </li>
     </ul>
     <p class="ml3">
     I enjoy using these simple programming languages for building and testing complex systems.
@@ -92,6 +119,15 @@
     </p>
     <p class="ml3">
     A Linux or Mac OS X machine equipped with VirtualBox, Vagrant, MacVim and Chrome. With these simple tools, I can build powerful apps quickly.
+    </p>
+    <p class="ml3 h3">
+    Advanced user of the following software systems:
+    <ul class="ml3">
+      <li>Sun Gridengine (90s-era grid computing)</li>
+      <li>PostgresQL (I aim to use this in all my projects when possible)</li>
+      <li>Linux (I run my own VPS, which hosts my email and this page!)</li>
+      <li>Vim (I love modal editing!)</li>
+    </ul>
     </p>
     <p></p>
     <h1 class="h1 black regular h0-responsive">Education</h1>
