--- a/resume/index.html
+++ b/resume/index.html
@@ -125,7 +125,7 @@
     <ul class="ml3">
       <li>Sun Gridengine (90s-era grid computing)</li>
       <li>PostgresQL (I aim to use this in all my projects when possible)</li>
-      <li>Linux (I run my own VPS, which hosts my email and this page!)</li>
+      <li>Linux (I run my own VPS, which hosts my email and blog)</li>
       <li>Vim (I love modal editing!)</li>
     </ul>
     </p>
